# tetris_gazebo

./: CMakeLists.txt  CONTRIBUTING.md  README.md  package.xml
config/: block_positions.yaml
include/breakout_gazebo/: breakoutGazeboPlugin.h
launch/: breakout.launch
models/bouncy_ball/: model.sdf
models/boundary/: model.sdf
models/breakout_base/: model.config  model.sdf
models/breakout_bg/: model.config  model.sdf
models/eight/: model.config  model.sdf
models/five/: model.sdf
models/four/: model.config  model.sdf
models/green_brick/: model.config  model.sdf
models/nine/: model.config  model.sdf
models/one/: model.sdf
models/orange_brick/: model.config  model.sdf
models/paddle/: model.sdf
models/red_brick/: model.config  model.sdf
models/seven/: model.config  model.sdf
models/six/: model.config  model.sdf
models/three/: model.config  model.sdf
models/two/: model.config  model.sdf
models/yellow_brick/: model.config  model.sdf
models/zero/: model.config  model.sdf
scripts/: paddle_play.py
src/: breakoutGazeboPlugin.cpp
worlds/: breakout.world
